page 1 : ajout de titre pour chaque bloc en titre h2 - correction du texte et de certains emplacements pour renforcer le CTA - remplacement des texte/image sous forme de contenus visibles pour les moteurs de recherche et respecter le responsive sur tous supports - tailles textes/ratio pour faciliter la lecture - boutons aspect plus gros

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ button {
     outline: none!important;
 }
 
+button {
+    font-size: 18px!important;
+}
+
 a:hover {
     text-decoration: none;
     cursor: pointer;
@@ -679,7 +683,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -702,17 +706,17 @@ p {
 }
 
 .social {
-    max-width: 400px;
-    margin: auto auto auto auto;
+    max-width: 600px;
+    margin: 50px auto;
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 26px;
     line-height: 1.4em;
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 18px;
     text-transform: uppercase;
     font-weight: 700;
     color: #333333!important;
@@ -763,6 +767,10 @@ h4 {
 .black-background {
     background-color: rgba(165, 147, 99, 0.7);
     padding: 40px 40px 40px 40px;
+}
+
+.bold {
+    font-weight: 600;
 }
 
 .bold-link {
